<resources>
    <string name="app_name">OurNews</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_theme">选择主题</string>
    <string name="push_open">推送开启</string>
    <string name="push_close">推送关闭</string>
    <string name="more_setting">更多设置</string>
    <string name="logout">退出登录</string>
    <string name="are_you_sure_logout">您确定要退出登录吗?</string>
    <string name="select_theme_hint">您当前处于夜间模式下\n\n确定要退出夜间模式以便您选择的主题生效\n\n(否则您选择的主题将在退出夜间模式时生效)</string>

    <string name="sign_error">签名不符,请卸载后从官网下载正确版本</string>
    <string name="open_app_info_error">打开设置失败,请手动到 设置-应用 中卸载</string>
    <string name="internet_error">网络错误</string>
    <string name="server_error">返回参数错误</string>
    <string name="connect_time_out">连接超时</string>
    <string name="no_login_name_or_password_error">用户名或密码错误</string>
    <string name="login_name_or_password_error">用户名或密码不规范</string>
    <string name="login_name_is_same">用户名已存在</string>
    <string name="photo_file_error">选择的图片出现问题,请重新选择</string>
    <string name="file_is_not_photo">选择的文件不是图片</string>
    <string name="photo_too_big">选择的图片过大</string>
    <string name="change_info_error">修改用户信息错误</string>
    <string name="open_new_error">打开新闻失败</string>
    <string name="no_write_permission">没有读写权限</string>
    <string name="token_error">此账号自动登录过期或已在其他设备登录,请尝试重新登录</string>

    <string name="exit">退出</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    <string name="edit">编辑</string>
    <string name="hint">提示</string>

    <string name="no_login">未登录</string>
    <string name="click_avatar_to_login">点击头像登陆</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="please_input_login_name">请输入登录名</string>
    <string name="please_input_password">请输入密码</string>

    <string name="login_name_length_error">用户名应为6~12位</string>
    <string name="password_length_error">密码应为6~12位</string>

    <string name="is_login">正在登陆</string>
    <string name="login_success">登陆成功</string>

    <string name="please_input_password_again">请确认密码</string>
    <string name="two_password_no_same">两次密码不一致</string>

    <string name="is_register">正在注册</string>
    <string name="register_success">注册成功</string>

    <string name="edit_info">编辑信息</string>
    <string name="get_photo_error">没有选择图片</string>
    <string name="loginName">用户名</string>
    <string name="nickName">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="save">保存</string>
    <string name="select_sex">选择性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="unknown">未知</string>
    <string name="please_select">请选择</string>
    <string name="no_change">没有修改数据,无需保存</string>
    <string name="change_avatar">更改头像</string>
    <string name="is_saving">正在保存</string>
    <string name="save_success">保存信息成功</string>

    <string name="load_photo_error">加载图片失败</string>
    <string name="save_img_to_phone">保存图片到本地</string>
    <string name="save_img_error">保存图片失败</string>
    <string name="save_img_success">保存图片成功,保存到OurNews目录下</string>
    <string name="no_write_file_permission">没有读写权限</string>

    <string name="ACG">ACG</string>
    <string name="game">游戏</string>
    <string name="sociology">社会</string>
    <string name="play">娱乐</string>
    <string name="technology">科技</string>
    <string name="go_to_see">查看更多</string>
    <string name="change_a_lot">换一批</string>
    <string name="is_refreshing">正在刷新</string>
    <string name="click_two_too_close">轻刷慢点</string>
    <string name="get_home_news_error">加载失败,点击重试</string>

    <string name="get_new_content_error_click_retry">获取新闻内容失败,点击重试</string>
    <string name="load_new_image_error">加载图片失败</string>
    <string name="write_comment">写评论</string>
    <string name="only_login_can_see_other_user">只有登录用户才能查看其他用户</string>
    <string name="no_login_do_you_login_now">只有登录用户才能发表评论</string>
    <string name="only_login_can_like_comment">只有登录用户才能点赞</string>
    <string name="only_login_can_reply_comment">只有登录用户才能回复评论</string>
    <string name="go_to_login">去登陆</string>
    <string name="send">发表</string>
    <string name="no_content">写都没写你想发什么?</string>
    <string name="id_error">本资讯可能已下架</string>
    <string name="collect_success">收藏成功</string>
    <string name="delete_collection_success">取消收藏成功</string>

    <string name="send_success">发表评论成功</string>

    <string name="comment">评论</string>
    <string name="get_comments_error_click_retry">获取评论失败,点击重试</string>
    <string name="no_more">没有更多了</string>
    <string name="no_comment">暂无评论</string>
    <string name="this_new_error">本资讯可能下架了</string>

    <string name="search">搜索</string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="no_search">没有搜索结果</string>
    <string name="search_retry">获取失败,请重新获取</string>
    <string name="my_collection">我的收藏</string>
    <string name="other_user_collection">他的收藏</string>
    <string name="my_history">浏览历史</string>

    <string name="no_collection">暂无收藏</string>
    <string name="no_history">暂无浏览历史</string>
    <string name="see_history">浏览</string>
    <string name="collection">收藏</string>
    <string name="temp">-</string>
    <string name="spot">·</string>
    <string name="reply">回复</string>
    <string name="skip">跳过</string>
    <string name="start">开始</string>
    <string name="found_new_versin">发现新版本</string>
    <string name="apk_info">APK信息：</string>
    <string name="ignore_this_version">忽略此版本</string>
    <string name="update">立即更新</string>
    <string name="update_forced">立即更新(此版本已无法使用)</string>
    <string name="is_download_new_version">正在下载更新</string>
    <string name="download_background">后台下载</string>
    <string name="cancel_download">取消下载</string>
    <string name="download_background_hint">正在后台下载更新</string>
    <string name="cancel_download_success">已取消更新</string>
    <string name="download_error">下载更新失败</string>

    <string name="click_again_exit">再按一次退出</string>
    <string name="uninstall">卸载</string>
</resources>
