<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="?attr/itemBackgroundColor"
                android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_download_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/is_download_new_version"
        android:textColor="?attr/textColor1"
        android:textSize="18sp"/>

    <ProgressBar
        android:id="@+id/dialog_download_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_download_title_text"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:max="100"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_download_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dialog_download_progress"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="?attr/textColor2"
        android:textSize="12sp"
        tools:text="10%"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/dialog_download_cancel_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_download_progress_text"
        android:text="@string/cancel_download"
        android:textColor="?attr/textColor2"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/dialog_download_background_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dialog_download_progress_text"
        android:text="@string/download_background"/>
</RelativeLayout>