<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/itemBackgroundColor"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_update_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/found_new_versin"
        android:textColor="?attr/textColor1"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apk_info"
            android:textColor="?attr/textColor3"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_update_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor3"
            android:textSize="12sp"
            tools:text="2.28 MB" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_update_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:textColor="?attr/textColor3"
            android:textSize="12sp"
            tools:text="[ 2017年4月9日 ]" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="16dp"
        android:background="?attr/viewColor" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_update_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:gravity="left|start"
        android:textColor="?attr/textColor2"
        android:textSize="14sp"
        tools:text="1.第一个版本" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_update_ignore_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/ignore_this_version"
            android:textColor="?attr/textColor3"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_update_update_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>