<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team60.ournews.module.ui.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/activity_register_top_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_register_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/elevation_tool_bar" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_register_login_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/activity_register_login_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/please_input_login_name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="12" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_register_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/activity_register_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_register_password_2_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/activity_register_password_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_password_again"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="16" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_register_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
