<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/activity_login_coordinator_layout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="com.team60.ournews.module.ui.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.team60.ournews.widget.CompatToolbar
            android:id="@+id/activity_login_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/elevation_tool_bar"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_login_login_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="12">

            <EditText
                android:maxLength="12"
                android:id="@+id/activity_login_login_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/please_input_login_name"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_login_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            android:layout_marginTop="16dp">

            <EditText
                android:maxLength="16"
                android:id="@+id/activity_login_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_login_register_btn"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/register"/>

            <Button
                android:id="@+id/activity_login_login_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
