<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/activity_comment_coordinator_layout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="com.team60.ournews.module.ui.activity.CommentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.team60.ournews.widget.CompatToolbar
            android:id="@+id/activity_comment_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ToolBarTheme"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/activity_comment_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/elevation_tool_bar"/>
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/activity_comment_no_comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_comment"
        android:textColor="?attr/textColor"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/activity_comment_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/activity_comment_retry_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/get_comments_error_click_retry"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/activity_new_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/elevation_down"/>

        <LinearLayout
            android:id="@+id/activity_new_bottom_action_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/colorPrimary"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/white"
                app:srcCompat="@drawable/edit"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/write_comment"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
