<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/activity_edit_user_coordinator_layout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="com.team60.ournews.module.ui.activity.EditUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.team60.ournews.widget.CompatToolbar
            android:id="@+id/activity_edit_user_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/elevation_tool_bar"/>

        <android.support.v7.widget.CardView
            android:id="@+id/activity_edit_user_avatar_car_view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/textColor"
            app:cardCornerRadius="0dp"
            app:cardElevation="3dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/activity_edit_user_avatar_background_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blur_background_color_1"/>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/activity_edit_user_avatar_img"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/activity_edit_user_name_car_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/itemBackgroundColor"
            app:cardCornerRadius="0dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/loginName"
                    android:textColor="?attr/textColor1"
                    android:textSize="18sp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/activity_edit_user_login_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="?attr/textColor3"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/activity_edit_nick_name_car_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/itemBackgroundColor"
            app:cardCornerRadius="0dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/nickName"
                    android:textColor="?attr/textColor1"
                    android:textSize="18sp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/activity_edit_user_nick_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="?attr/textColor3"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/activity_edit_sex_car_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/itemBackgroundColor"
            app:cardCornerRadius="0dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/sex"
                    android:textColor="?attr/textColor1"
                    android:textSize="18sp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/activity_edit_sex_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="?attr/textColor3"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_edit_save_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            android:textColor="@color/white"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
